  Ha, woops.
- Upgraded less to latest version as of 6/20/24 and fixed "terminal is not
  fully functional" errors in initramfs.
- Added newt (whiptail) to initramfs for creating dialog-based prompts, perhaps
  for an installer or rescue interface down the road.
- The fwdev= mount code now waits for device hotplug to finish, so we can now
  boot with USB flash drive for fwdev.

* v0.19.0
2024-05-30: RuckusRD v0.19.0

- Upgraded all subprojects to latest available versions as of 9/11/23.
- Upgraded microcode, firmware, and zfs to latest version as of 05/24/24.
- Added `sqshfstype` command line arg to linuxrc and fixed bug where
  `rootfstype` was ignored.
- Added fsarchiver to the initramfs.
- Fixed silly decho -n output bug

* v0.18.0
2022-05-13: RuckusRD v0.18.0

This release is primarily focused on two things: 1) build system overhaul
stemming from splitting utils out into seperate packages, and 2) adding more
comfort (e.g, man pages) and capability (e.g., real fdisk w/ GPT support) to
the initramfs maint shell.  Plus bug-fixes and subproject updates.

- Removed doit, which moved into its own package.
- Removed extractenator, which moved into its own package.
- Removed kernel-builder and kernel-tar, which moved into the new
  kernel-builder package.
- Removed firmwarenator, which moved into its own package.
- Removed microcodenator, which moved into its own package.
- Cleaned up initrd output, now completely quiet when `quiet` specified on
  kernel command line, added `verbose` for traditionally noisey output.
- Preload common modules needed for accessing fwdev.
- Copy host sytem modprobe config into initramfs.
- Don't append command line modprobe options to system modprobe config.
- Allow fwdev=DEV1,DEV2,... on command line.
- Put manpages back in initramfs.  We had been removing them to save space, but
  our initramfs is hopelessly large and super useful now... we might find
  ourselves wanted manpages.